<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg">

    <ImageButton
        android:id="@+id/ex"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:contentDescription="@string/previous"
        android:onClick="Activity1Press"
        android:scaleType="fitCenter"
        android:src="@drawable/s3"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/asd"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:visibility="visible">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        style="@android:style/Widget.ImageButton"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:contentDescription="@string/facts"
                        android:onClick="CF"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/a14" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:contentDescription="@string/statistics"
                        android:onClick="CS"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/a15" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/facts"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/ax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/statistics"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:contentDescription="@string/dosanddonts"
                        android:onClick="CDaD"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/a16" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:contentDescription="@string/explore"
                        android:onClick="CE"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/a17" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/as"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/dosanddonts"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/az"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/explore"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </TableRow>
            </TableLayout>


        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/ecosystems"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/display"
            android:cropToPadding="true"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/icture1" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:background="@null"
            android:contentDescription="@string/previous"
            android:onClick="Prev"
            android:scaleType="fitCenter"
            android:src="@drawable/s1" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignTop="@+id/imageButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/next"
            android:onClick="Next"
            android:scaleType="fitCenter"
            android:src="@drawable/s2" />
    </RelativeLayout>

</RelativeLayout>
